# Peridynamics_2D

./: .gitignore  CMakeLists.txt  Points.cpp  Points.h  README.md  a.out  build.sh  main.cpp  peridynamics_2d.sh
